--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 
     <style>
         body {
-            background-image: url('car3.jpeg');
+            background-image: url('templates/car3.jpeg');
             background-repeat: no-repeat;
             background-size: cover;
             text-align: center;
